# python-enabler-cli

./: .gitignore  main.py  pyproject.toml  requirements.txt
cmds/: pecommand.py  pecommand_test.py  pecommanddict.py  peproject.py  peproject_test.py  perepository.py  peshell.py  pesimpleerror.py  pesimpleerror_test.py  test_pesimpleerror.py
cmds/scripts/: git.toml
errors/: pesimpleerror_test.py  pesyntaxerror.py
src/python_enabler/: main.py  main.toml
src/python_enabler/cmds/: pecommanddict.py  peproject.py  pescript.py  peshell.py
src/python_enabler/errors/: peexception.py  pesimpleerror.py  pesyntaxerror.py
src/python_enabler/errors/exceptions/: peprojectexception.py  pesyntaxerror.py
src/python_enabler/tools/: app_config.py  peprinter.py  url_matcher.py
tests/cmds/: test_pecommand.py  test_peproject.py
tests/errors/: test_pesimpleerror.py
tests/tools/: test_app_config.py  test_url_matcher.py
tools/: pecommand.py  pecommand_test.py  peprinter.py  test_pecommand.py  url_matcher.py  url_matcher_test.py
