[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "python_enabler"
version = "1.0"
authors = [
  { name="Inflamous", email="david.dembinski@inflamous.eu" },
]
description = "TODO: Package description"
requires-python = ">=3.9"

[project.scripts]
python-enabler = "python_enabler.main:app"

[tool.setuptools.packages.find]
where = ["src"]